# rv8803-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh  deny.toml  typos.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
examples/: basic.rs  linux.rs  linux.rs_pending  linux_async.rs  linux_blocking.rs  mac_async.rs
src/: async.rs  bus.rs  driver.rs  error.rs  formatter.rs  i2c0.rs  lib.rs  log.rs  models.rs  rtc.rs
src/rtc/: address.rs  now.rs  reg.rs  registers.rs  update.rs
