[package]
name = "rv8803"
version = "4.0.0"
authors = ["Michael de Silva <michael@cyberdynea.io>"]
edition = "2021"
repository = "https://github.com/bsodmike/rv8803-rs"
license = "MIT"
description = "RTC clock driver for the rv8803 chip via I2C"
readme = "README.md"
keywords = ["i2c", "driver", "embedded-hal-driver", "rv8803"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = ["blocking"]
alloc = []
async = ["alloc"]
blocking = []
linux_blocking = ["blocking", "linux_embedded_hal"]
linux_async = ["async", "linux_embedded_hal"]
linux_embedded_hal = ["linux-embedded-hal", "log",]

# FIXME: This needs further testing before released into the public API.
# alloc = []
# async = ["defmt", "embedded-hal-async", "alloc"]

[dependencies]
chrono = { version = "0.4.38", default-features = false }
defmt = { version = "0.3", optional = true }
heapless = { version = "0.8", default-features = false }
embedded-hal = { package = "embedded-hal", version = "^1.0" }
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-async = { package = "embedded-hal-async", version = "^1.0", optional = true }
linux-embedded-hal = { version = "^0.3", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], default-features = false, optional = true }
shared-bus = { version = "0.3.1" }

[dev-dependencies]
i2cdev = "0.5.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
