[package]
name = "rv8803"
version = "4.0.0"
authors = ["Michael de Silva <michael@cyberdynea.io>"]
repository = "https://github.com/bsodmike/rv8803-rs"
license = "MIT"
description = "RTC clock driver for the rv8803 chip via I2C"
readme = "README.md"
keywords = ["i2c", "driver", "embedded-hal-driver", "rv8803"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"
rust-version = "1.83.0"
publish = false

[features]
default = []

[dependencies]
defmt = { version = "^0.3" }
embedded-hal = { package = "embedded-hal", version = "^1.0" }
embedded-hal-async = "1.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
